integrate delayed job

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -1,5 +1,5 @@
 
-$brand-primary: orange;
+// $brand-primary: orange;
 @import "bootstrap";
 @import "bootstrap-sprockets";
 @import "font-awesome";
