--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,19 +4,40 @@
   <title>AwesomeBlog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  
+
   <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render "/layouts/nav" %>
-  <div class="container">
+  <div class="row">
     <% if flash[:notice] %>
       <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
     <% elsif flash[:alert] %>
       <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
     <% end %>
-  </div>
     <%= yield %>
-
+  </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="list-inline">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li class="footer-menu-divider">.</li>
+            <li>
+              <a href="#">All blogs</a>
+            </li>
+            <li class="footer-menu-divider">.</li>
+            <li>
+              <a href="#">About</a>
+            </li>
+          </ul>
+          <p class="copyright text-muted small">Copyright &copy; Awesome Blogs 2015</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
