--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -14,76 +14,64 @@
 
     <p>Tags: <%= @blog.tags.map {|x| x.name }.join(", ") %></p>
     <!-- formatted_date is a method created in the ApplicationHelper for reformatting the date -->
-    <% if can? :edit, @blog %>
-      <%= link_to "Edit", edit_blog_path(@blog), class: "btn btn-info" %>
-    <% end %>
-    <% if can? :destroy, @blog %>
-      <%= link_to "Delete", blog_path(@blog), method: :delete, data: {confirm: "Are you use you want to delete this post?"}, class: "btn btn-danger" %>
-    <% end %>
-
-    <% if user_signed_in? %>
-      <% if current_user.liked_blog?(@blog) %>
-        <%= link_to fa_icon("thumbs-up"),
-                    blog_like_path(@blog, @like),
-                    class: "big-icon", title: "Un-Like", method: :delete %>
-      <% else %>
-        <%= link_to fa_icon("thumbs-o-up"),
-                    blog_likes_path(@blog),
-                    class: "big-icon", title: "Like", method: :post %>
+    <div class="ed-de">
+      <% if can? :edit, @blog %>
+        <%= link_to "Edit", edit_blog_path(@blog), class: "btn btn-info" %>
       <% end %>
-    <% end %>
-    <%= @blog.likes.count %>
-
-    <% if user_signed_in? %>
-      <% if current_user.favourited_blog?(@blog) %>
-        <%= link_to fa_icon("star"), blog_favourite_path(@blog, @favourite), class: "big-icon", title: "Un-Favourite", method: :delete %>
-      <% else %>
-        <%= link_to fa_icon("star-o"), blog_favourites_path(@blog), class: "big-icon", title: "Favourite", method: :post %>
+      <% if can? :destroy, @blog %>
+        <%= link_to "Delete", blog_path(@blog), method: :delete, data: {confirm: "Are you use you want to delete this post?"}, class: "btn btn-danger" %>
       <% end %>
-    <% end %>
-    (<%= @blog.favourites.count %>)
+    </div>
 
-    <% if user_signed_in? %>
-      <% if current_user_vote.nil? %>
-        <%= link_to fa_icon("chevron-up"),
-                    blog_votes_path(@blog, {vote: {up: true}}),
-                    class: "big-icon",
-                    method: :post %>
-        <%= link_to fa_icon("chevron-down"),
-                    blog_votes_path(@blog, {vote: {up: false}}),
-                    class: "big-icon",
-                    method: :post %>
-     <% elsif current_user_vote.up? %>
-        <%# user has voted up %>
-        <%= link_to fa_icon("chevron-circle-up"),
-                    blog_vote_path(@blog, current_user_vote),
-                    method: :delete,
-                    class: "big-icon" %>
-        <%= link_to fa_icon("chevron-down"),
-                    blog_vote_path(@blog, current_user_vote, {vote: {up: false}}),
-                    method: :patch,
-                    class: "big-icon" %>
-    <% else %>
-        <%# user has voted down %>
-        <%= link_to fa_icon("chevron-up"),
-                    blog_vote_path(@blog, current_user_vote, {vote: {up: true}}),
-                    method: :patch,
-                    class: "big-icon" %>
-        <%= link_to fa_icon("chevron-circle-down"),
-                    blog_vote_path(@blog, current_user_vote),
-                    method: :delete,
-                    class: "big-icon" %>
-    <% end %>
-    (<%= @blog.votes_count %>)
-    <% end %>
+    <div class="col-md-6">
+      <div class="col-md-2">
+        <%= render "/likes/like" %>
+      </div>
+      <div class="col-md-2">
+        <%= render "/favourites/favourite" %>
+      </div>
+      <div class="col-md-8">
+        <% if user_signed_in? %>
+          <% if current_user_vote.nil? %>
+            <%= link_to fa_icon("chevron-up"),
+                        blog_votes_path(@blog, {vote: {up: true}}),
+                        class: "big-icon",
+                        method: :post %>
+            <%= link_to fa_icon("chevron-down"),
+                        blog_votes_path(@blog, {vote: {up: false}}),
+                        class: "big-icon",
+                        method: :post %>
+         <% elsif current_user_vote.up? %>
+            <%# user has voted up %>
+            <%= link_to fa_icon("chevron-circle-up"),
+                        blog_vote_path(@blog, current_user_vote),
+                        method: :delete,
+                        class: "big-icon" %>
+            <%= link_to fa_icon("chevron-down"),
+                        blog_vote_path(@blog, current_user_vote, {vote: {up: false}}),
+                        method: :patch,
+                        class: "big-icon" %>
+        <% else %>
+            <%# user has voted down %>
+            <%= link_to fa_icon("chevron-up"),
+                        blog_vote_path(@blog, current_user_vote, {vote: {up: true}}),
+                        method: :patch,
+                        class: "big-icon" %>
+            <%= link_to fa_icon("chevron-circle-down"),
+                        blog_vote_path(@blog, current_user_vote),
+                        method: :delete,
+                        class: "big-icon" %>
+        <% end %>
+        (<%= @blog.votes_count %>)
+        <% end %>
+      </div>
+    </div>
+
+    <div class="clearfix"></div>
+
 
     <h2>New Commnet</h2>
-
-    <%= simple_form_for [@blog, @comment], remote: true do |f| %>
-      <%= f.input :body %>
-      <%= f.submit "Create Comment", class: "btn btn-primary" %>
-    <% end %>
-
+    <%= render "/comments/form" %>
     <h2>Comments</h2>
     <div class="comments">
       <% @blog.comments.latest_first.each do |com| %>
