--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -5,3 +5,16 @@
 // body {
 //   padding-top: 30px;
 // }
+
+.page-header > button {
+  margin: 5px 0px 35px 20px;
+}
+
+.new-b {
+  margin: 0px 6px ;
+}
+
+.list-group{
+  height:500px;
+  overflow-y: scroll;
+}
