--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-  <div class="well">
+  <div class="well" id="comment_<%=com.id%>" >
       <%= com.body %>
       <%= link_to "Delete", blog_comment_path(@blog, com), method: :delete,
                   class: "btn btn-sm btn-danger",
